// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build order of notifications, with sitemap 1`] = `
Array [
  "Compiling css ...",
  "Finished compiling css in 0ms",
  "Bundling files for the browser ...",
  "Finished bundling files for the browser in 5ms",
  "Processing files for static HTML ...",
  "Finished processing files for static HTML in 5ms",
  "Copying non-page files ...",
  "Finished copying non-page files in 0ms",
  "Writing static html ...",
  "Finished writing static HTML in 0ms",
  "Building sitemap ...",
  "Finished building sitemap in 0ms",
  "Finished build in 0ms",
]
`;

exports[`build order of notifications, without CSS inlining or sitemap 1`] = `
Array [
  "Bundling files for the browser ...",
  "Finished bundling files for the browser in 5ms",
  "Processing files for static HTML ...",
  "Finished processing files for static HTML in 5ms",
  "Copying non-page files ...",
  "Finished copying non-page files in 0ms",
  "Writing static html ...",
  "Finished writing static HTML in 0ms",
  "Finished build in 0ms",
]
`;
